--- a/resources/style.css
+++ b/resources/style.css
@@ -12,12 +12,14 @@ html{
   display: flex; 
   background-color: white;
   width: 64px;
+  justify-content: center;
+ 
 }
 
 .logo {
     display: flex;
     padding-left: 24px;
-    height: 32px;
+    /*height: 32px;*/
     font-weight: bold;
     justify-content: left;
     color: rgba(31, 31, 31, 1);
@@ -27,9 +29,13 @@ html{
     flex-direction: row;
     
     
+     
 }
 
 .logo-image {
+ display: flex;
+ justify-content: left;
+ 
  
 }
 
@@ -54,43 +60,61 @@ html{
 
 .learn {
     display: flex;
-    background-color: grey;
+    background-color:rgba(54, 54, 54, 0.32);
     flex-direction: row;
-    height: auto;
-    min-height: 200px;
-    margin-top: 20px;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    min-width: 0;
+    min-height: 0;
+    overflow: hidden;
 }
+
+
 
 .banner-img {
     display: flex;
+    min-width: 0;
     justify-content: left;
-    padding-right: 24px;
+    padding-right: 0px;
     padding-bottom: 32px;
     padding-top: 32px;
     padding-left: 24px;
-    width: 100%;
+    height: 100%;
+    max-width: 100%;
     
-}
+    /*img not reactive*/  
+ }
+
 .learn-something {
     display: flex;
-    color: black;
+    color: rgba(54, 54, 54, 0.92);
     font-family: 'Montserrat';
     flex-direction: column;
     margin-left: 24px;
     font-size: 50px;
     width: 100%;
+    padding-top: 110px;
+    padding-left: 24px;
+    height: 100%;
+    
 }
 .lorem {
-    font-size: 25px;
+    font-size: 35px;
     font-weight: bolder;
-    color: black;
+    color: rgba(54, 54, 54, 0.92);
     font-family: inherit;
-    
-    
+    margin-bottom: 20px;
+    height: 100%;   
 }
 .start-button {
+    display: inline-block;
     font-family: 'Montserrat';
-    background-color: black;
+    background-color: rgba(54, 54, 54, 0.92);
     color:white;
+    text-align: center;
+    font-weight: lighter;
+    font-size: 25px; 
+    width: 80%;
+    height: 100%;
 }
+
