--- a/resources/style.css
+++ b/resources/style.css
@@ -119,66 +119,91 @@ html{
 }
 
 .doesnt-hurt {
-    display: inline-flex;
-    flex-wrap: wrap;
-    font-family: 'Montserrat';
-    background-color: white;
-    position: relative;
+  position: relative;
 }
 
 .information-main {
-    display: inline-flex;
-    min-width: 0;
-    flex-direction: column;
     
 }
 
 .info-img {
-    width: 60%;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 32px;
-    padding-bottom: 32px;
+   display: flex;
+   width: 60%;
+   padding-top: 32px;
+   padding-right: 24px;
+   padding-left: 24px;
+  
 }
 
 .practicing {
-    color: grey;
-    padding-top: 24px;
-    text-align: start;
+ font-family: 'Montserrat';
+ color: rgb(52, 56, 49);
+ font-size: 45px;
+ font-weight: bold;
+ padding-left: 24px;
+ position: relative;
 }
 
 .curabitur {
-    display:inline-block;
-    color: grey;
-    padding-bottom: 32px;
-    word-break: break-all;
-    
+  font-size: 25px;
+  word-break: keep-all;
+  width: 68%; 
+  font-weight: 300; 
+  position: absolute;
+  top: 65px;
+  left: 24px;
 }
 
-.img-panel {
-    display: inline-flex;
-    justify-content: right;
-    width: 40%;
-    margin-top: 500px;
-    
+.strat {
+  color: black;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+.image-panel {
+ 
+ 
 }
 
 .images {
-    display: inline-flex;
-    height: auto;
-    width: 35%;
-    justify-content: right;
-    
-    
+ 
 }
 .guest {
-    background-color: grey;
-    color:white;
+    
     
 }
 
 .info-text {
- display: flex;
- justify-content: right;
+ 
+ 
  
 }
+
+.first-img{
+
+}
+
+.one-image{
+    float: left;
+}
+
+.first-text {
+    float: right;
+}
+
+.two-image {
+  float: left;
+}
+
+.second-text {
+    float: right;
+}
+
+.guest-image{
+    float: left;
+}
+
+.guest-text{
+   float: right;
+}
+
