--- a/resources/style.css
+++ b/resources/style.css
@@ -11,11 +11,10 @@ body {
   flex-direction: column;
 }
 
-.header {
-  display: flex; 
-  background-color: white;
-  width: 64px;
-  justify-content: center;
+
+
+ header {
+  
  
 }
 
@@ -29,11 +28,10 @@ body {
     font-size: 20px;
     font-family: 'Montserrat';
     letter-spacing: 1px;
-    flex-direction: row;
-    
-    
-     
+    flex-direction: row;    
 }
+
+
 
 .logo-image {
  display: flex;
@@ -67,8 +65,7 @@ body {
     flex-direction: row;
     min-height: 100%;
     min-width: 100%;
-    min-width: 0;
-    min-height: 0;
+    
     overflow: hidden;
 }
 
@@ -270,9 +267,9 @@ body {
  
 }
 
-.sl {
+.sl { 
   display: flex;
-  justify-content: center;
+  justify-content: center; /*This section doesn't respond properly and needs to be adjusted. Don't use absolute positioning on it*/
   position: absolute;
   top: 25px;
   right: 850px;
@@ -572,6 +569,98 @@ footer {
  float: right;
  margin-top: 16px;
  word-spacing: 20px;
+}
+
+@media all and (max-width: 500px) {
+  body {
+    
+  }
+}
+
+@media all and (max-width: 500px) { /*hides desktop header for mobile*/
+  .logo {
+   display: none;
+   
+  }
+}
+
+@media all and (max-width: 2000px) { /*hides mobile header for desktop*/
+  .mobile-header {
+    display: none;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .mobile-header {
+    display: flex;
+    justify-content: space-evenly;
+    height: 64px;
+    width: 100%;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .learn {
+    display: flex;
+    
+    text-align: left;
+    
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .banner-img {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  text-align: left;
+  padding: 0;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .learn-something {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    
+  }
+}
+
+@media all and (max-width: 500px) {
+  .bimg {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    
+  }
+
+  .learn-something {
+    font-size: 37px;
+    margin-left: 16px;
+  }
+
+  .lorem {
+    display: flex;
+    flex-direction: column;
+    padding-left: 16px;
+    font-size: 25px;
+    width: 100%;
+    
+  }
+
+  .start-button {
+    align-self: center;
+    text-align: center; 
+    padding-right: 20px;
+    padding-left: 20px;
+    font-size: 20px;
+    
+  }
 }
 
 
