--- a/resources/style.css
+++ b/resources/style.css
@@ -63,8 +63,8 @@ body {
     display: flex;
     background-color:rgba(54, 54, 54, 0.32);
     flex-direction: row;
-    min-height: 100%;
-    min-width: 100%;
+    height: 100%;
+    width: 100%;
     
     overflow: hidden;
 }
@@ -73,16 +73,23 @@ body {
 
 .banner-img {
     display: flex;
-    min-width: 0;
-    justify-content: left;
+    width: 100%;
+    height: auto;
+    float: left;
     padding-right: 0px;
     padding-bottom: 32px;
     padding-top: 32px;
     padding-left: 24px;
-    height: 100%;
-    max-width: 100%;
     
-    /*img not reactive*/  
+    
+    
+    
+ }
+
+ .bimg {
+  display: flex;
+  width: 100%;
+  height: auto;
  }
 
 .learn-something {
@@ -96,6 +103,7 @@ body {
     padding-top: 110px;
     padding-left: 24px;
     height: 100%;
+    float: right;
     
 }
 .lorem {
@@ -573,7 +581,7 @@ footer {
 
 @media all and (max-width: 500px) {
   body {
-    
+    position: absolute;
   }
 }
 
@@ -602,7 +610,7 @@ footer {
 @media all and (max-width: 500px) {
   .learn {
     display: flex;
-    
+    overflow: visible;
     text-align: left;
     
     width: 100%;
@@ -641,25 +649,112 @@ footer {
 
   .learn-something {
     font-size: 37px;
-    margin-left: 16px;
+    padding-left: 16px;
+    margin: 0px;
   }
+
 
   .lorem {
     display: flex;
     flex-direction: column;
     padding-left: 16px;
-    font-size: 25px;
+    font-size: 24px;
     width: 100%;
-    
+    padding-bottom: 10px;
+    text-align: start;
+    vertical-align: top;
+    line-height: 40px;
   }
 
   .start-button {
-    align-self: center;
-    text-align: center; 
-    padding-right: 20px;
-    padding-left: 20px;
+    display: flex;
+    justify-content:center;
     font-size: 20px;
+    margin-left: 15px;
     
+  }
+}
+
+@media all and (max-width: 500px) { /*hides desktop header for mobile*/
+  .information-main {
+   display: none;
+   
+  }
+}
+
+@media all and (max-width: 500px) { /*hides desktop header for mobile*/
+  .image-panel {
+   display: none;
+   
+  }
+}
+
+@media all and (max-width: 2000px) { /*hides mobile header for desktop*/
+  .image-panel-m {
+    display: none;
+    
+  }
+}
+
+@media all and (max-width: 500px) {
+  .image-panel-m {
+    display: flex;
+    flex-direction: column;
+    padding-top: 16px;
+    height: 100%;
+    width: 100%;
+  }
+
+  .first-img-m {
+   display: flex;
+   padding-left: 16px;
+   width: 80%;
+   height: auto;
+   flex-direction: column;
+   text-align: left;
+   margin-bottom: 64px;
+  }
+
+  .first-text-m {
+    margin-left: 16px;
+  }
+
+  .panel-header-m {
+    font-weight: 600; 
+    font-size: 25px;
+    line-height: 8px;
+    color: rgba(54, 54, 54, 0.92);
+  }
+
+  .keynote-m {
+    line-height: 1.8;
+    font-size: 19px;
+    color: rgba(54, 54, 54, 0.92);
+    
+  }
+
+  .read-more-m {
+    font-size: 18px;
+    line-height: 8px;
+  }
+
+  .second-image-m {
+   display: flex;
+   padding-left: 16px;
+   width: 80%;
+   height: auto;
+   flex-direction: column;
+   text-align: left;
+   margin-bottom: 64px;
+  }
+
+  .guest-m {
+    display: flex;
+    padding-left: 16px;
+    width: 80%;
+    height: auto;
+    flex-direction: column;
+    text-align: left;
   }
 }
 
