--- a/resources/style.css
+++ b/resources/style.css
@@ -758,6 +758,213 @@ footer {
   }
 }
 
+@media all and (max-width: 500px) { /*hides desktop header for mobile*/
+  .start-learning {
+   display: none;
+   
+  }
+}
+
+@media all and (max-width: 2000px) { /*hides mobile header for desktop*/
+  .start-learning-m {
+    display: none;
+    
+  }
+}
+
+@media all and (max-width: 500px) {
+  .start-learning-m {
+   display: grid;
+   border-top: solid;
+   border-bottom: solid;
+   border-top-color: rgba(54, 54, 54, 0.32);
+   border-bottom-color: rgba(54, 54, 54, 0.32);
+   border-top-width: thin;
+   border-bottom-width: thin;
+   height: 100%;
+   width: 100%;
+   flex-direction: column;
+   text-align: center;
+  }
+
+  .start-learning-m-header {
+    display: flex;
+    justify-content: center;
+    
+  }
+
+  .m-header {
+    display: flex;
+    justify-content: center;
+  }
+
+  .sl-heading-m {
+    color: rgba(54, 54, 54, 0.92);
+    font-weight: bolder;
+    font-size: 31.2px;
+  }
+
+  .start-learning-m-buttons {
+    display: flex;
+    flex-direction: column;
+    column-gap: 10px;
+    width: 60%;
+    justify-self: center;
+    height: 60%;
+    row-gap: 8px;
+    margin-bottom: 32px;
+  }
+
+  .m-text-buttons {
+    color: rgba(54, 54, 54, 0.92);
+    text-align: left;
+    
+  }
+
+  .software-m {
+    
+    background-color: rgba(54, 54, 54, 0.32);
+    border: none;
+    color:  rgba(54, 54, 54, 0.92);
+    font-size: 24px;
+    font-weight: bold;
+    justify-self: center;
+    padding-left: 16px;
+    
+  }
+
+  .computer-m {
+    background-color: rgba(54, 54, 54, 0.32);
+    border: none;
+    color:  rgba(54, 54, 54, 0.92);
+    font-size: 24px;
+    font-weight: bold;
+    justify-self: center;
+    padding-left: 16px;
+    
+  }
+
+  .design-m {
+    background-color: rgba(54, 54, 54, 0.32);
+    border: none;
+    color:  rgba(54, 54, 54, 0.92);
+    font-size: 24px;
+    font-weight: bold;
+    justify-self: center;
+    padding-left: 16px;
+  }
+
+  .data-m {
+    background-color: rgba(54, 54, 54, 0.32);
+    border: none;
+    color:  rgba(54, 54, 54, 0.92);
+    font-size: 24px;
+    font-weight: bold;
+    justify-self: center;
+    padding-left: 16px;
+  }
+
+  .business-m {
+    background-color: rgba(54, 54, 54, 0.32);
+    border: none;
+    color:  rgba(54, 54, 54, 0.92);
+    font-size: 24px;
+    font-weight: bold;
+    justify-self: center;
+    padding-left: 16px;
+  }
+
+  .marketing-m {
+    background-color: rgba(54, 54, 54, 0.32);
+    border: none;
+    color:  rgba(54, 54, 54, 0.92);
+    font-size: 24px;
+    font-weight: bold;
+    justify-self: center;
+    padding-left: 16px;
+  }
+}
+
+@media all and (max-width: 500px) { /*hides desktop header for mobile*/
+  .thesis {
+   display: none;
+   
+  }
+}
+
+@media all and (max-width: 2000px) { /*hides mobile header for desktop*/
+  .thesis.m {
+    display: none;
+    
+  }
+}
+
+@media all and (max-width: 500px) {
+  .thesis-m {
+   display: grid;
+   flex-direction: column;
+   justify-content: center;
+   height: 100%;
+   width: 100%;
+   text-align: center;
+  }
+
+  .thesis-header-m {
+   color:rgba(54, 54, 54, 0.92);
+   
+  }
+
+  .th-m-text {
+   font-weight: bold;
+   font-size: 30px;
+  }
+
+  .video-m {
+   width: 85%;
+   height: auto;
+   justify-self: center;
+   margin-bottom: 24px;
+  }
+
+
+}
+
+@media all and (max-width: 500px) { /*hides desktop header for mobile*/
+  .footer-left {
+   display: none;
+   
+  }
+}
+
+@media all and (max-width: 500px) { /*hides desktop header for mobile*/
+  .footer-right {
+   display: none;
+   
+  }
+}
+
+@media all and (max-width: 2000px) { /*hides mobile header for desktop*/
+  .footer-m {
+    display: none;
+    
+  }
+}
+
+
+@media all and (max-width: 500px) {
+  .footer-m {
+   display: flex;
+  }
+
+  .footer-m-text {
+  float: left;
+  color:rgba(54, 54, 54, 0.92);
+  font-size: 18px;
+  margin-bottom: 16px;
+  }
+}
+
+
 
 
 
