--- a/resources/style.css
+++ b/resources/style.css
@@ -132,12 +132,14 @@ body {
 }
 
 .information-main {
-    
+  float: left;
+  width: 64.9%;
 }
 
 .info-img {
    display: flex;
-   width: 60%;
+   float: left;
+   width: 95%;
    padding-top: 32px;
    padding-right: 24px;
    padding-left: 24px;
@@ -151,7 +153,7 @@ body {
  font-weight: bold;
  padding-left: 24px;
  float: left;
- width: 60%;
+ width: 90%;
 }
 
 .curabitur {
@@ -243,14 +245,13 @@ body {
  flex-direction: column;
  width: 35%;
  gap: 16px;
- position: absolute;
- top: 32px;
- right: 20px;
+ margin-top: 32px;
  border-left: solid;
  border-left-color: rgba(54, 54, 54, 0.32);
  border-left-width: thin;
  padding-bottom: 11.26%; /*this line controls the border for this panel. It gives more padding to the panel, making the line longer or shorter.*/
  overflow: hidden;
+ float: right;
 }
 
 
@@ -267,20 +268,18 @@ body {
 .start-learning{
  background-color: rgba(54, 54, 54, 0.32);
  display: flex;
- margin-top: 23%;
+ margin-top: 0.25%;
  text-align: center;
- position: relative;
  height: 100%;
  width: 100%;
+ justify-content: center;
+ flex-direction: column;
  
 }
 
 .sl { 
   display: flex;
-  justify-content: center; /*This section doesn't respond properly and needs to be adjusted. Don't use absolute positioning on it*/
-  position: absolute;
-  top: 25px;
-  right: 850px;
+  justify-content: center;                
   font-family: 'Montserrat';
   color: rgb(52, 56, 49);
   font-size: 23px;
@@ -288,12 +287,12 @@ body {
 
 .learning-panel {
   display: flex;
-  margin-top: 8%;
+  margin-top: 32px;
   flex-direction: column;
   font-family: 'Montserrat';
-  justify-items: center;
+  justify-content: left;
   padding-bottom: 32px;
-  width: 100%;
+  
   padding-left: 200px;
 }
 
@@ -893,7 +892,7 @@ footer {
 }
 
 @media all and (max-width: 2000px) { /*hides mobile header for desktop*/
-  .thesis.m {
+  .thesis-m {
     display: none;
     
   }
@@ -949,6 +948,7 @@ footer {
     
   }
 }
+
 
 
 @media all and (max-width: 500px) {
